[tool.poetry]
name = "tg-bots"
version = "0.1.0"
description = ""
authors = ["x <netro@example.com>"]
readme = "README.md"
packages = [{include = "tg_bots"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"
redis = "^4.3.4"
pika = "^1.3.1"
pydantic = "^1.10.2"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
